Fix horizontal scroll bug caused by full-width mixin

--- a/web/themes/custom/union_marketing/scss/layout/_default.scss
+++ b/web/themes/custom/union_marketing/scss/layout/_default.scss
@@ -1,6 +1,10 @@
+html,
+body {
+  overflow-x: hidden; // Use of the full-width() mixin causes a tiny horizontal scrollbar.
+}
+
 body {
   margin: 0 auto;
-  overflow-x: hidden; // Use of the full-width() mixin causes a tiny horizontal scrollbar.
 }
 
 .layout-container {
